objects/FieloEE__Event__c.object
<CustomObject>
    <description>Actions that do not generate points performed by members.</description>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>To Process</fullName>
                    <default>true</default>
                    <label>To Process</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>